# meson-handson

./: meson.build
include/libperfectcalc/: plus.hpp
src/: main.cpp  meson.build
src/libperfectcalc/: meson.build  plus.cpp
